# MSc-Thesis

./: .gitignore  BibliMSc.bib  EncabezadoTesisMSc.bbl  EncabezadoTesisMSc.out  EncabezadoTesisMSc.tex  EncabezadoTesisMSc.toc  TesisMSc.bbl  _temp.tex  personal.bst  plaindin_esp.bst  plaindin_so.bst
Anexos/: Anexos.tex
Art_Elsevier/: Art_Elsevier.bbl  Art_Elsevier.out  Art_Elsevier.tex  BibliMSc.bib  biblio1.bib
ChanciSolver/: 1D.txt  1DWells.txt  2DWells.txt  9SPE.txt  CMakeLists.txt  README.txt  calculitos.el
ChanciSolver/src/: ChanciSolver.cpp  Face.h  FlowFunctions.h  Mesh.h  WellFunctions.h
ChanciSolver/src/Fluid/: Equilibrium_Relation.h  Fluid.h  Interfluid_Interaction.h  Measured_Property.h
ChanciSolver/src/Generics/: Equation.h  Global.h  Value_Reader.h
ChanciSolver/src/Globals/: Constants.h  Database.h  Initial_Conditions.h
ChanciSolver/src/Mesh/: Cell.h  Face.h  Mesh.h
ChanciSolver/src/Numerics/: Equation.h  Jacobian.h  NewtonRaphson.h
ChanciSolver/src/Phase/: Equilibrium_Relationship.h  Interphase_Interaction.h  Phase.h  Property_Measure.h
ChanciSolver/src/Rock/: Rock.h
ChanciSolver/src/VTK/: VTKMesh.h
ChanciSolver/src/Well/: Injection_Perforate.h  Injection_Perforation.h  Injection_Well.h  Injector_Perforate.h  Injector_Well.h  Operative_Condition.h  Perforate.h  Perforation.h  Producer_Perforate.h  Producer_Well.h  Production_Perforation.h  Production_Well.h  Well.h
Fig/: 1D.vsdx  3D.vsdx  ActualizacionDeIncognitas.vsdx  ActualizacionDeVariables.vsdx  AportesFlujo.vsdx  Baker.vsdx  Base de datos.xlsx  CalcularAcumulation.vsdx  CalcularAfectaciones.vsdx  CalcularFlujoBase.vsdx  CalcularFlujoQuimico.vsdx  CalcularInteracciones.vsdx  CalcularPeacemanInyector.vsdx  CalcularPeacemanProductor.vsdx  CalcularPerforado.vsdx  CalcularPozo.vsdx  CalcularResidual.vsdx  CalcularResidualFluido.vsdx  CalcularResidualPozo.vsdx  CalcularResidualQuimico.vsdx  CalcularTransferenciaTotal.vsdx  CalculoPropiedades.vsdx  Conceptos.vsdx  DensidadesPromedio.vsdx  EjFuncion.vsdx  (+34 more)
(+15 files in other folders)
