CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PROJECT_NAME ChanciSolver)
PROJECT(${PROJECT_NAME})

SET(${PROJECT_NAME}_VERSION_MAJOR 1)
SET(${PROJECT_NAME}_VERSION_MINOR 0)

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(src/Generics)
INCLUDE_DIRECTORIES(src/Mesh)
INCLUDE_DIRECTORIES(src/Fluid)


ADD_EXECUTABLE(${PROJECT_NAME}.exe src/ChanciSolver.cpp)
