CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PROJECT_NAME ChanciSolver)
PROJECT(${PROJECT_NAME} CXX)

SET(${PROJECT_NAME}_VERSION_MAJOR 1)
SET(${PROJECT_NAME}_VERSION_MINOR 0)

SET(CMAKE_CXX_STANDARD 14) 

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(src/Generics)
INCLUDE_DIRECTORIES(src/Globals)
INCLUDE_DIRECTORIES(src/Mesh)
INCLUDE_DIRECTORIES(src/Rock)
INCLUDE_DIRECTORIES(src/Fluid)
INCLUDE_DIRECTORIES(src/Numerics)
INCLUDE_DIRECTORIES(src/Well)
INCLUDE_DIRECTORIES(src/VTK)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

FIND_PACKAGE(Eigen3 REQUIRED NO_MODULE)

ADD_EXECUTABLE(${PROJECT_NAME}.exe src/ChanciSolver.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}.exe Eigen3::Eigen)

IF(VTK_LIBRARIES)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME}.exe ${VTK_LIBRARIES})
ELSE()
  TARGET_LINK_LIBRARIES(${PROJECT_NAME}.exe vtkHybrid vtkWidgets)
ENDIF()

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/VTKResult)
